cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
  labels:
    app: argo
spec:
  tls: # < placing a host in the TLS config will indicate a certificate should be created
  - hosts:
    - my.rgcld.com
    secretName: argo-cert-secret # < cert-manager will store the created certificate in this secret
  rules:
  - host: my.rgcld.com
    http:
      paths:
      - path: /otomato
        pathType: Prefix
        backend:
          service:
            name: pyunf-argocd-server
            port:
              number: 80
